--- a/main.ipynb
+++ b/main.ipynb
@@ -12,13 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-01-29T16:15:09.204218Z",
-     "start_time": "2024-01-29T16:15:09.200635Z"
+     "end_time": "2024-01-29T18:33:51.850151Z",
+     "start_time": "2024-01-29T18:33:51.843874Z"
     }
    },
    "outputs": [],
@@ -45,33 +45,22 @@
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "07 ZETTEL.pdf\n",
-      "14 REMARKS ON COLOUR.pdf\n",
-      "09 REMARKS ON THE PHILOSOPHY OF PSYCHOLOGY 1.pdf\n",
-      "04 THE BLUE AND THE BROWN BOOKS.pdf\n",
-      "02 PHILOSOPHICAL REMARKS.pdf\n",
-      "(Routledge Classics) Ludwig Wittgenstein - Tractatus Logico-Philosophicus-Routledge (2001).pdf\n",
-      "10 REMARKS ON THE PHILOSOPHY OF PSYCHOLOGY 2.pdf\n",
-      "05 REMARKS ON THE FOUNDATIONS OF MATHEMATICS.pdf\n",
-      "08 PHILOSOPHICAL INVESTIGATIONS.pdf\n",
-      "01 Notebooks.pdf\n",
-      "06 Culture and Value.pdf\n",
-      "11 LAST WRITINGS ON THE PHILOSOPHY OF PSYCHOLOGY.pdf\n",
-      "12 LAST WRITINGS ON THE PHILOSOPHY OF PSYCHOLOGY 2.pdf\n",
-      "Wittgenstein - Notebooks 1914-1916 ed 1961.pdf\n",
-      "03 PHILOSOPHICAL GRAMMAR.pdf\n",
-      "13 ON CERTAINTY.pdf\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def _clean_line(data):\n",
-    "    clean_ \n",
+    "def _clean_text(text):\n",
+    "    text = re.sub(r\"Page( Break)? \\d{1,3}\" , \" \", text)\n",
+    "    text = re.sub(r\"Page( Break)? [ivm]{1,3}\" , \" \", text) \n",
+    "    # remove capital letter words\n",
+    "    text = re.sub(r\"/(\\w*[A-Z]+\\w*)\\w+/\", \"\", text)\n",
+    "    text = re.sub(\"\\d{1,5}.\", \"\", text)\n",
+    "    text = re.sub(r\"\\s+\" , \" \", text)\n",
+    "    text = re.sub(r\"†\", \"\", text)\n",
+    "    text = re.sub(r\"\\( Eds.\\)\", \"\", text)\n",
+    "    # [Cf. Z ]\n",
+    "    text = re.sub(r\"\\[a-zA-Z\\w*\\]\", \"\", text)\n",
+    "    # text = re.sub(r\"\\s+\" , \" \", text)\n",
+    "    \n",
+    "    return text\n",
     "\n",
     "def extract_pdf(pdf_file_path):\n",
     "    with open (pdf_file_path, \"rb\") as f:\n",
@@ -80,7 +69,7 @@
     "        for index, page in enumerate(pdf.pages):\n",
     "            # skip first page\n",
     "            if index not in [0]:\n",
-    "                full_text += page.extract_text() + '\\n'\n",
+    "                full_text += _clean_text(page.extract_text() + '\\n') \n",
     "        return full_text\n",
     "    \n",
     "def save_file(data: str, file_name: str):\n",
@@ -96,25 +85,30 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-29T18:10:56.260203Z",
-     "start_time": "2024-01-29T18:10:00.524689Z"
+     "end_time": "2024-01-29T18:48:19.817063Z",
+     "start_time": "2024-01-29T18:47:24.578300Z"
     }
    },
    "id": "821b3fdf56a1b9d9",
-   "execution_count": 38
+   "execution_count": 50
   },
   {
    "cell_type": "code",
    "outputs": [],
-   "source": [
-    "for txt_file in Path('data').glob('*.pdf'):\n",
-    "    \n",
-    "    break\n"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false
    },
    "id": "d2bc938025c2770b"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "fea284fe56095146"
   }
  ],
  "metadata": {
