utils to load csv

--- a/main.ipynb
+++ b/main.ipynb
@@ -300,49 +300,7 @@
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "True"
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'the' in stopwords.words('english')\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-02-03T20:11:38.656145Z",
-     "start_time": "2024-02-03T20:11:38.650483Z"
-    }
-   },
-   "id": "ca7f0ce6a8b24532",
-   "execution_count": 28
-  },
-  {
-   "cell_type": "code",
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/PT46FV/Developer/Learning/master-nlp/fnlp/venv/lib/python3.9/site-packages/spacy/pipeline/lemmatizer.py:211: UserWarning: [W108] The rule-based lemmatizer did not find POS annotation for one or more tokens. Check that your pipeline includes components that assign token.pos, typically 'tagger'+'attribute_ruler' or 'morphologizer'.\n",
-      "  warnings.warn(Warnings.W108)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We need at least 1 word to plot a word cloud, got 0.\n",
-      "{0: '(Routledge Classics) Ludwig Wittgenstein - Tractatus Logico-Philosophicus-Routledge (2001)', 1: '10 REMARKS ON THE PHILOSOPHY OF PSYCHOLOGY 2', 2: '01 Notebooks', 3: '06 Culture and Value', 4: '05 REMARKS ON THE FOUNDATIONS OF MATHEMATICS', 5: '08 PHILOSOPHICAL INVESTIGATIONS', 6: '04 THE BLUE AND THE BROWN BOOKS', 7: '07 ZETTEL', 8: '09 REMARKS ON THE PHILOSOPHY OF PSYCHOLOGY 1', 9: '14 REMARKS ON COLOUR', 10: '02 PHILOSOPHICAL REMARKS', 11: '03 PHILOSOPHICAL GRAMMAR', 12: 'Wittgenstein - Notebooks 1914-1916 ed 1961', 13: '13 ON CERTAINTY', 14: '11 LAST WRITINGS ON THE PHILOSOPHY OF PSYCHOLOGY', 15: '12 LAST WRITINGS ON THE PHILOSOPHY OF PSYCHOLOGY 2'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.DataFrame(columns=['sentence', 'label_book'])\n",
     "pdf_map = {}\n",
@@ -350,63 +308,69 @@
     "nlp = spacy.load(\"en_core_web_lg\")\n",
     "stop_words = nlp.Defaults.stop_words\n",
     "(Path(\"data/wordcloud\").mkdir(parents=True, exist_ok=True))\n",
-    "for index, pdf_file in enumerate(Path('data').glob('*.txt')):\n",
-    "    file_name = pdf_file.name.split('.')[0]\n",
-    "    pdf_map[index] = file_name\n",
-    "    with open(pdf_file) as f:\n",
-    "        lines = f.readlines()\n",
-    "        for line in lines:\n",
-    "            sentences_preprocessed = []\n",
-    "            sentences_lemmatized = []\n",
-    "            # sentence tokenizer\n",
-    "            sentences = sent_tokenize(line)\n",
-    "            for sentence in sentences:\n",
-    "                sentence = preprocess(sentence) \n",
-    "                words = [word for word in sentence.split() if word.lower() not in stop_words and len(word) > 2]\n",
-    "                sentence_clean = ' '.join(words)\n",
-    "                # add only sentences with at least 3 words\n",
-    "                if len(sentence_clean.split(' ')) <= 2:\n",
-    "                    continue\n",
-    "                # start preprocess\n",
-    "                sentences_preprocessed.append(sentence_clean)\n",
     "\n",
-    "            for doc in nlp.pipe(sentences_preprocessed, disable=[\"tok2vec\", \"tagger\", \"parser\", \"attribute_ruler\", \"pos_tagger\", \"ner\"]):\n",
-    "                # Do something with the doc here\n",
-    "                sentence_lemmatized = \" \".join([token.lemma_ for token in doc])\n",
-    "                sentences_lemmatized.append(sentence_lemmatized)\n",
-    "                            \n",
-    "            # wordclouds save\n",
-    "            try:\n",
-    "                word_cloud = WordCloud(\n",
-    "                        collocations=False,\n",
-    "                        background_color='black',\n",
-    "                        width=2048, height=1080,\n",
-    "                        ).generate(\" \".join(sentences_lemmatized))\n",
-    "                word_cloud.to_file(Path(\"data/wordcloud\") / f\"{file_name}_wc.png\")\n",
-    "            except Exception as e:\n",
-    "                print(e)\n",
-    "            labels = np.full(len(sentences_lemmatized), file_name)\n",
-    "            temp_df = pd.DataFrame({'sentence': sentences_lemmatized, 'label_book': index})\n",
-    "            df = pd.concat([df, temp_df])\n",
-    "del temp_df\n",
-    "print(pdf_map)"
+    "def generate_df(generate: bool = False):\n",
+    "    if generate:\n",
+    "        for index, pdf_file in enumerate(Path('data').glob('*.txt')):\n",
+    "            file_name = pdf_file.name.split('.')[0]\n",
+    "            pdf_map[index] = file_name\n",
+    "            with open(pdf_file) as f:\n",
+    "                lines = f.readlines()\n",
+    "                for line in lines:\n",
+    "                    sentences_preprocessed = []\n",
+    "                    sentences_lemmatized = []\n",
+    "                    # sentence tokenizer\n",
+    "                    sentences = sent_tokenize(line)\n",
+    "                    for sentence in sentences:\n",
+    "                        sentence = preprocess(sentence) \n",
+    "                        words = [word for word in sentence.split() if word.lower() not in stop_words and len(word) > 2]\n",
+    "                        sentence_clean = ' '.join(words)\n",
+    "                        # add only sentences with at least 3 words\n",
+    "                        if len(sentence_clean.split(' ')) <= 2:\n",
+    "                            continue\n",
+    "                        # start preprocess\n",
+    "                        sentences_preprocessed.append(sentence_clean)\n",
+    "\n",
+    "                    for doc in nlp.pipe(sentences_preprocessed, disable=[\"tok2vec\", \"tagger\", \"parser\", \"attribute_ruler\", \"pos_tagger\", \"ner\"]):\n",
+    "                        # Do something with the doc here\n",
+    "                        sentence_lemmatized = \" \".join([token.lemma_ for token in doc])\n",
+    "                        sentences_lemmatized.append(sentence_lemmatized)\n",
+    "                    # wordclouds save\n",
+    "                    try:\n",
+    "                        word_cloud = WordCloud(\n",
+    "                                collocations=False,\n",
+    "                                background_color='black',\n",
+    "                                width=2048, height=1080,\n",
+    "                                ).generate(\" \".join(sentences_lemmatized))\n",
+    "                        word_cloud.to_file(Path(\"data/wordcloud\") / f\"{file_name}_wc.png\")\n",
+    "                    except Exception as e:\n",
+    "                        print(e)\n",
+    "                    labels = np.full(len(sentences_lemmatized), file_name)\n",
+    "                    temp_df = pd.DataFrame({'sentence': sentences_lemmatized, 'label_book': index})\n",
+    "                    df = pd.concat([df, temp_df])\n",
+    "                    df.to_csv((Path(\"data\")) / \"dataframe.csv\")\n",
+    "    else:\n",
+    "        df = pd.read_csv((Path(\"data\")) / \"dataframe.csv\")\n",
+    "        \n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "df = generate_df()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-04T06:18:04.719268Z",
-     "start_time": "2024-02-04T06:16:50.387306Z"
+     "end_time": "2024-02-04T08:49:00.234669Z",
+     "start_time": "2024-02-04T08:48:58.859644Z"
     }
    },
    "id": "d2bc938025c2770b",
-   "execution_count": 52
+   "execution_count": 55
   },
   {
    "cell_type": "code",
    "outputs": [],
-   "source": [
-    "df.to_csv((Path(\"data\")) / \"dataframe.csv\")"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
@@ -422,10 +386,10 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "                                               sentence label_book\n0                           world totality facts things          0\n1                          world determined facts facts          0\n2     totality facts determines case lso casethe fac...          0\n3                                   world divides facts          0\n4     ach item case case hing remains samewhat casea...          0\n...                                                 ...        ...\n1075                             melding bothas tempted         15\n1076                          asks way difficult answer         15\n1077  arrow end remark shows connected following remark         15\n1078                      sentence obviously incomplete         15\n1079  manuscript paragraph originally read partially...         15\n\n[38312 rows x 2 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>sentence</th>\n      <th>label_book</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>world totality facts things</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>world determined facts facts</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>totality facts determines case lso casethe fac...</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>world divides facts</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>ach item case case hing remains samewhat casea...</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1075</th>\n      <td>melding bothas tempted</td>\n      <td>15</td>\n    </tr>\n    <tr>\n      <th>1076</th>\n      <td>asks way difficult answer</td>\n      <td>15</td>\n    </tr>\n    <tr>\n      <th>1077</th>\n      <td>arrow end remark shows connected following remark</td>\n      <td>15</td>\n    </tr>\n    <tr>\n      <th>1078</th>\n      <td>sentence obviously incomplete</td>\n      <td>15</td>\n    </tr>\n    <tr>\n      <th>1079</th>\n      <td>manuscript paragraph originally read partially...</td>\n      <td>15</td>\n    </tr>\n  </tbody>\n</table>\n<p>38312 rows × 2 columns</p>\n</div>"
+      "text/plain": "       Unnamed: 0                                           sentence  \\\n0               0                        world totality facts things   \n1               1                       world determined facts facts   \n2               2  totality facts determines case lso casethe fac...   \n3               3                                world divides facts   \n4               4  ach item case case hing remains samewhat casea...   \n...           ...                                                ...   \n38307        1075                             melding bothas tempted   \n38308        1076                          asks way difficult answer   \n38309        1077  arrow end remark shows connected following remark   \n38310        1078                      sentence obviously incomplete   \n38311        1079  manuscript paragraph originally read partially...   \n\n       label_book  \n0               0  \n1               0  \n2               0  \n3               0  \n4               0  \n...           ...  \n38307          15  \n38308          15  \n38309          15  \n38310          15  \n38311          15  \n\n[38312 rows x 3 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Unnamed: 0</th>\n      <th>sentence</th>\n      <th>label_book</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>world totality facts things</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>world determined facts facts</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>totality facts determines case lso casethe fac...</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>world divides facts</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n      <td>ach item case case hing remains samewhat casea...</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>38307</th>\n      <td>1075</td>\n      <td>melding bothas tempted</td>\n      <td>15</td>\n    </tr>\n    <tr>\n      <th>38308</th>\n      <td>1076</td>\n      <td>asks way difficult answer</td>\n      <td>15</td>\n    </tr>\n    <tr>\n      <th>38309</th>\n      <td>1077</td>\n      <td>arrow end remark shows connected following remark</td>\n      <td>15</td>\n    </tr>\n    <tr>\n      <th>38310</th>\n      <td>1078</td>\n      <td>sentence obviously incomplete</td>\n      <td>15</td>\n    </tr>\n    <tr>\n      <th>38311</th>\n      <td>1079</td>\n      <td>manuscript paragraph originally read partially...</td>\n      <td>15</td>\n    </tr>\n  </tbody>\n</table>\n<p>38312 rows × 3 columns</p>\n</div>"
      },
-     "execution_count": 54,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,12 +400,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-04T06:44:59.080172Z",
-     "start_time": "2024-02-04T06:44:59.069375Z"
+     "end_time": "2024-02-04T08:49:02.541885Z",
+     "start_time": "2024-02-04T08:49:02.532619Z"
     }
    },
    "id": "20dbf93763dcef7f",
-   "execution_count": 54
+   "execution_count": 56
   }
  ],
  "metadata": {
